--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "whatsapp-webhook",
     "version": "1.0.0",
+    "type": "module",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
@@ -8,6 +9,7 @@
     "dependencies": {
         "axios": "^1.11.0",
         "dotenv": "^17.2.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "googleapis": "^156.0.0"
     }
 }
