--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     },
     "dependencies": {
         "axios": "^1.11.0",
+        "body-parser": "^2.2.0",
         "dotenv": "^17.2.1",
-        "express": "^4.18.2",
-        "googleapis": "^156.0.0"
+        "express": "^4.21.2",
+        "form-data": "^4.0.4",
+        "googleapis": "^156.0.0",
+        "sharp": "^0.34.3"
     }
 }
