--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "express": "^4.21.2",
         "form-data": "^4.0.4",
         "googleapis": "^156.0.0",
+        "pdf-poppler": "^0.2.1",
+        "pdf2pic": "^3.2.0",
         "sharp": "^0.34.3"
     }
 }
